finalizada la cabecera con diseno axul

--- a/blogspot.html
+++ b/blogspot.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                aqui inicia cabecera
+                Hiperblog
+                <span id="tagline">tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>
