cambie toddo a azul y puse suscribete

--- a/blogspot.html
+++ b/blogspot.html
@@ -28,6 +28,7 @@
                     rockstar. Pero estadisticamente no lo eres
                     por ahora... jijijiji
                 </p>
+                <p> Sucribite y dale laik</p>
             </div>
         </div>
     </body>
