--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>El titulo del post, ademas este es un cambio</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
