--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hiperblog
-                <span id="tagline">tu blog de cabecera</span>
+                <span id="tagline">tu blog de cabecera 2.0</span>
             </div>
             <div id="post">
                 <h1>
