--- a/blogspot.html
+++ b/blogspot.html
@@ -29,6 +29,7 @@
                     por ahora... jijijiji
                 </p>
                 <p> Sucribite y dale laik</p>
+                <p>Y casi se me olvida la passphrase jajajjajaja</p>
             </div>
         </div>
     </body>
